--- a/E-Shop-microservices/src/Services/Catalog/CatalogAPI/CatalogAPI.csproj
+++ b/E-Shop-microservices/src/Services/Catalog/CatalogAPI/CatalogAPI.csproj
@@ -7,10 +7,12 @@
     <UserSecretsId>1a3eb439-436f-4b03-9b91-ebbe4ff14b2a</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Carter" Version="8.2.1" />
+    <PackageReference Include="Marten" Version="7.38.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
   </ItemGroup>
 
