Finish the Catalog Microservice and start the Basket Mircoservice

--- a/E-Shop-microservices/docker-compose.yml
+++ b/E-Shop-microservices/docker-compose.yml
@@ -4,6 +4,12 @@ services:
   catalogdb:
     image: postgres
 
+  catalogapi:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+      context: .
+      dockerfile: src/Services/Catalog/CatalogAPI/Dockerfile
+
 volumes:
   postgres_catalog:
       
