--- a/E-Shop-microservices/src/Services/Catalog/CatalogAPI/appsettings.json
+++ b/E-Shop-microservices/src/Services/Catalog/CatalogAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Server=localhost;port = 5432;Database=catalogdb;User Id = postgres;Password= postgres; Include Error Detail = true"
+    "Database": "Host=127.0.0.1;Server=localhost;port = 5432;Database=catalogdb;User Id = postgres;Password= postgres; Include Error Detail = true"
   },
   "AllowedHosts": "*"
 }
