--- a/E-Shop-microservices/docker-compose.yml
+++ b/E-Shop-microservices/docker-compose.yml
@@ -4,6 +4,25 @@ services:
   catalogdb:
     image: postgres
 
+  basketdb:
+    image: postgres
+
+  distributedcache:
+    image: redis
+
+  catalog.api:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+      context: .
+      dockerfile: Services/Catalog/Catalog.API/Dockerfile
+
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: src/Services/Basket/Basket.API/Dockerfile
+
+
   catalogapi:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
@@ -12,4 +31,4 @@ services:
 
 volumes:
   postgres_catalog:
-      
+  postgres_basket:
