update the docker files

--- a/E-Shop-microservices/src/Services/Discount/Discount.Grpc/Discount.Grpc.csproj
+++ b/E-Shop-microservices/src/Services/Discount/Discount.Grpc/Discount.Grpc.csproj
@@ -10,12 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
     <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.71.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Protos\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
