--- a/E-Shop-microservices/docker-compose.yml
+++ b/E-Shop-microservices/docker-compose.yml
@@ -1,34 +1,21 @@
 version: '3.4'
-
 services:
   catalogdb:
     image: postgres
-
   basketdb:
     image: postgres
-
   distributedcache:
     image: redis
-
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: .
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
-
   basket.api:
     image: ${DOCKER_REGISTRY-}basketapi
     build:
       context: .
-      dockerfile: src/Services/Basket/Basket.API/Dockerfile
-
-
-  catalogapi:
-    image: ${DOCKER_REGISTRY-}catalogapi
-    build:
-      context: .
-      dockerfile: src/Services/Catalog/CatalogAPI/Dockerfile
-
+      dockerfile: Services/Basket/Basket.API/Dockerfile
 volumes:
   postgres_catalog:
   postgres_basket:
