--- a/E-Shop-microservices/launchSettings.json
+++ b/E-Shop-microservices/launchSettings.json
@@ -4,7 +4,9 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "catalogdb": "StartWithoutDebugging"
+        "catalogdb": "StartWithoutDebugging",
+        "catalogapi": "StartDebugging",
+        "discount.grpc": "StartDebugging"
       }
     }
   }
