Finish the Discount using Grpc CRUD operations and Test the APIs

--- a/E-Shop-microservices/src/Services/Discount/Discount.Grpc/Discount.Grpc.csproj
+++ b/E-Shop-microservices/src/Services/Discount/Discount.Grpc/Discount.Grpc.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
     <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.71.0" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5">
       <PrivateAssets>all</PrivateAssets>
