Finish the Application layer

--- a/E-Shop-microservices/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/E-Shop-microservices/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Database=OrderDb;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
