Finish Configuration of MassTransit and Register RabbitMQ

--- a/E-Shop-microservices/src/Services/Basket/Basket.API/appsettings.json
+++ b/E-Shop-microservices/src/Services/Basket/Basket.API/appsettings.json
@@ -12,5 +12,10 @@
   "GrpcSettings": {
     "DiscountUrl": "https://localhost:5052"
   },
+  "MessageBroker": {
+    "Host": "amqp://localhost:15672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
