--- a/E-Shop-microservices/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/E-Shop-microservices/src/Services/Ordering/Ordering.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "Database": "Server=localhost;Database=OrderDb;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
   },
+  "MessageBroker": {
+    "Host": "amqp://localhost:15672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
