Finish the Async Communication w/ RabbitMQ & MassTransit

--- a/E-Shop-microservices/launchSettings.json
+++ b/E-Shop-microservices/launchSettings.json
@@ -6,7 +6,8 @@
       "serviceActions": {
         "catalogdb": "StartWithoutDebugging",
         "catalogapi": "StartDebugging",
-        "discount.grpc": "StartDebugging"
+        "discount.grpc": "StartDebugging",
+        "ordering.api": "StartDebugging"
       }
     }
   }
