--- a/E-Shop-microservices/src/Services/Ordering/Ordering.API/Ordering.API.csproj
+++ b/E-Shop-microservices/src/Services/Ordering/Ordering.API/Ordering.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>24af7ed8-c1ac-452d-8f03-4752e675b79d</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
