--- a/E-Shop-microservices/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/E-Shop-microservices/src/Services/Ordering/Ordering.API/appsettings.json
@@ -3,9 +3,12 @@
     "Database": "Server=localhost;Database=OrderDb;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
   },
   "MessageBroker": {
-    "Host": "amqp://localhost:15672",
+    "Host": "amqp://localhost:5672",
     "UserName": "guest",
     "Password": "guest"
+  },
+  "FeatureManagement": {
+    "OrderFullfilment": false
   },
   "Logging": {
     "LogLevel": {
