--- a/E-Shop-microservices/docker-compose.override.yml
+++ b/E-Shop-microservices/docker-compose.override.yml
@@ -3,31 +3,30 @@ services:
   catalogdb:
     container_name: catalogdb
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=catalogdb
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=postgres
+        - POSTGRES_DB=catalogdb
     restart: always
     ports:
-      - "5432:5432"
+        - "5432:5432"
     volumes:
-      - postgres_catalog:/var/lib/postgresql/data/
+        - postgres_catalog:/var/lib/postgresql/data/
   basketdb:
     container_name: basketdb
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=BasketDb
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=postgres
+        - POSTGRES_DB=BasketDb
     restart: always
     ports:
-      - "5433:5432"
+        - "5433:5432"
     volumes:
-      - postgres_basket:/var/lib/postgresql/data/
+        - postgres_basket:/var/lib/postgresql/data/
   distributedcache:
     container_name: distributedcache
     restart: always
     ports:
-      - "6379:6379"
-
+        - "6379:6379"
   orderdb:
     container_name: orderdb
     environment:
@@ -36,49 +35,83 @@ services:
     restart: always
     ports:
         - "1433:1433"
+  messagebroker:
+    container_name: messagebroker
+    hostname: ecommerce-mq
+    environment:
+        - RABBITMQ_DEFAULT_USER=guest
+        - RABBITMQ_DEFAULT_PASS=guest
+    restart: always
+    ports:
+        - "5672:5672"
+        - "15672:15672"
   basket.api:
     container_name: basket.api
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=8080
-      - ASPNETCORE_HTTPS_PORTS=8081
-      - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
-      - ConnectionStrings__Redis=distributedcache:6379
-      - GrpcSettings__DiscountUrl=https://discount.grpc:8081
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_HTTP_PORTS=8080
+        - ASPNETCORE_HTTPS_PORTS=8081
+        - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
+        - ConnectionStrings__Redis=distributedcache:6379
+        - GrpcSettings__DiscountUrl=https://discount.grpc:8081
+        - MessageBroker__Host=amqp://ecommerce-mq:5672
+        - MessageBroker__UserName=guest
+        - MessageBroker__Password=guest
     depends_on:
-      - basketdb
-      - distributedcache
+        - basketdb
+        - distributedcache
+        - discount.grpc
+        - messagebroker
     ports:
-      - "6001:8080"
-      - "6061:8081"
+        - "6001:8080"
+        - "6061:8081"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+        - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+        - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
   catalogapi:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=8080
-      - ASPNETCORE_HTTPS_PORTS=8081
-      - ConnectionStrings__Database=Server=catalogdb;Port=5432;Database=catalogdb;User Id=postgres;Password=postgres;Include Error Detail=true
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_HTTP_PORTS=8080
+        - ASPNETCORE_HTTPS_PORTS=8081
+        - ConnectionStrings__Database=Server=catalogdb;Port=5432;Database=catalogdb;User Id=postgres;Password=postgres;Include Error Detail=true
     ports:
-      - "8080"
-      - "8081"
+        - "8080"
+        - "8081"
     depends_on:
-      - catalogdb
+        - catalogdb
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
-
-
+        - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+        - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
   discount.grpc:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=8080
-      - ASPNETCORE_HTTPS_PORTS=8081
-      -  ConnectionStrings__Database=Data Source=discountdb
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_HTTP_PORTS=8080
+        - ASPNETCORE_HTTPS_PORTS=8081
+        -  ConnectionStrings__Database=Data Source=discountdb
     ports:
-      - "6002:8080"
-      - "6062:8081"
+        - "6002:8080"
+        - "6062:8081"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+        - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+        - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+  ordering.api:
+    environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_HTTP_PORTS=8080
+        - ASPNETCORE_HTTPS_PORTS=8081
+        - ConnectionStrings__Database=Server=orderdb;Database=OrderDb;Encrypt=False;TrustServerCertificate=True;Trusted_Connection=True
+        - MessageBroker__Host=amqp://ecommerce-mq:5672
+        - MessageBroker__UserName=guest
+        - MessageBroker__Password=guest
+        - FeatureManagement__OrderFullfilment=false
+    ports:
+        - "6003:8080"
+        - "6063:8081"
+    depends_on:
+        - orderdb
+        - messagebroker
+    volumes:
+        - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+        - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+        - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+        - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
