--- a/E-Shop-microservices/docker-compose.yml
+++ b/E-Shop-microservices/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     image: redis
   orderdb:
     image: mcr.microsoft.com/mssql/server
+  messagebroker:
+    image: rabbitmq:management
   basket.api:
     image: ${DOCKER_REGISTRY-}basketapi
     build:
@@ -18,16 +20,21 @@ services:
     build:
       context: .
       dockerfile: src/Services/Catalog/CatalogAPI/Dockerfile
-
-
   discount.grpc:
     image: ${DOCKER_REGISTRY-}discountgrpc
     build:
       context: .
       dockerfile: src/Services/Discount/Discount.Grpc/Dockerfile
 
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: src/Services/Ordering/Ordering.API/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:
+
 
 
