--- a/E-Shop-microservices/docker-compose.yml
+++ b/E-Shop-microservices/docker-compose.yml
@@ -32,9 +32,16 @@ services:
       context: .
       dockerfile: src/Services/Ordering/Ordering.API/Dockerfile
 
+  yarpapigatway:
+    image: ${DOCKER_REGISTRY-}yarpapigatway
+    build:
+      context: .
+      dockerfile: src/ApiGatways/YarpApiGatway/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:
+
 
 
 
