--- a/E-Shop-microservices/launchSettings.json
+++ b/E-Shop-microservices/launchSettings.json
@@ -7,7 +7,8 @@
         "catalogdb": "StartWithoutDebugging",
         "catalogapi": "StartDebugging",
         "discount.grpc": "StartDebugging",
-        "ordering.api": "StartDebugging"
+        "ordering.api": "StartDebugging",
+        "yarpapigatway": "StartDebugging"
       }
     }
   }
